# SENDePSIC_develop

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
examples/: ACOM_dominant_orientation_clustering.py  ACOM_general.py  ACOM_general_many_data.py  ACOM_single_phase_area.py  ACOM_single_phase_area_many_data.py  EDX_quant_spectrum.py  Run_radial_profile_analysis_ver2.py  phase_analysis_ver2.py
execution_notebook/: Run_radial_profile_analysis.ipynb  Run_radial_profile_analysis_concurrent_EDX_version.ipynb
sendepsic/: __init__.py  acom.py  feature_extract.py  phase.py  radial_profile.py  synthesis.py  utils.py
tests/: test_refactoring.py
