[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sendepsic"
version = "0.1.0"
description = "Atomic structure analysis package with radial average & variance profiles for ePSIC"
authors = [
    { name = "Jinseok Ryu", email = "jinseuk56@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy",
    "scipy",
    "matplotlib",
    "py4DSTEM",
    "hyperspy",
    "scikit-learn",
    "pandas",
    "tifffile",
    "ipywidgets",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["sendepsic*"]
